--- a/1.7/1.6.6.html
+++ b/1.7/1.6.6.html
@@ -114,7 +114,7 @@
             id: 'Alon',
             name: 'Alon',
             image: new Image(),
-            src: './1.7/assets/characters/alon.png', // Adjusted for GitHub Pages
+            src: './assets/characters/alon.png', // Correct relative path
             width: 68,
             height: 68,
             color: '#ffd700' // Fallback color
@@ -123,7 +123,7 @@
             id: 'cupsey',
             name: 'Cupsey',
             image: new Image(),
-            src: './1.7/assets/characters/cupsey.png', // Adjusted for GitHub Pages
+            src: './assets/characters/cupsey.png', // Correct relative path
             width: 68,
             height: 68,
             color: '#4CAF50' // Fallback color
