Fix game issues and prepare for GitHub Pages deployment

--- a/1.7/1.6.6.html
+++ b/1.7/1.6.6.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pumpy Pills - Enhanced Trading Experience</title>
+    <title>Pumpy Pills</title>
     <style>
         body { 
             margin: 0; 
@@ -61,7 +61,6 @@
 </head>
 <body>
     <canvas id="gameCanvas" width="800" height="600"></canvas>
-    <div class="instructions">Use SPACEBAR or click to jump and navigate through the trading obstacles</div>
     <script type="module">
     // Simple error tracking
     window.addEventListener('error', function(e) {
