--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Pumpy Pills - Redirecting...</title>
 </head>
 <body>
-    <p>If you are not redirected automatically, <a href="./1.7/1.6.6.html">click here</a> to play Pumpy Pills.</p>
+    <p>If you are not redirected automatically, <a href="./1.7/1.6.6.html">click here</a>.</p>
 </body>
 </html>
