Initial commit for GitHub Pages deployment

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=./1.7/1.6.6.html">
+    <meta http-equiv="refresh" content="1; url=./1.7/1.6.6.html"> <!-- Delay increased to 1 second -->
     <title>Pumpy Pills - Redirecting...</title>
 </head>
 <body>
