--- a/1.7/1.6.6.html
+++ b/1.7/1.6.6.html
@@ -61,6 +61,9 @@
 </head>
 <body>
     <canvas id="gameCanvas" width="800" height="600"></canvas>
+    <div class="instructions">
+        <p>Time your jumps carefully to navigate the obstacles!</p> <!-- Added motivational instruction -->
+    </div>
     <script type="module">
     // Simple error tracking
     window.addEventListener('error', function(e) {
