--- a/1.7/1.6.6.html
+++ b/1.7/1.6.6.html
@@ -57,13 +57,60 @@
             height: 40px;
             position: relative;
         }
+        header {
+            width: 100%;
+            background: #131a26;
+            color: #00d4ff;
+            font-size: 2rem;
+            font-weight: bold;
+            padding: 18px 0 12px 0;
+            letter-spacing: 1px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+            text-align: center;
+            z-index: 10;
+        }
+        footer {
+            width: 100%;
+            background: #131a26;
+            color: #b2b5be;
+            font-size: 14px;
+            padding: 14px 0 10px 0;
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            text-align: center;
+            z-index: 10;
+            box-shadow: 0 -2px 8px rgba(0,0,0,0.08);
+        }
+        main {
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: flex-start;
+            padding-bottom: 60px; /* space for footer */
+        }
+        .canvas-container {
+            margin-top: 24px;
+            margin-bottom: 12px;
+        }
     </style>
 </head>
 <body>
-    <canvas id="gameCanvas" width="800" height="600"></canvas>
-    <div class="instructions">
-        <p>Time your jumps carefully to navigate the obstacles!</p> <!-- Added motivational instruction -->
-    </div>
+    <header>
+        <img src="./assets/characters/cupsey.png" alt="Cupsey Logo" style="height:48px;width:auto;vertical-align:middle;display:inline-block;">
+    </header>
+    <main>
+        <div class="canvas-container">
+            <canvas id="gameCanvas" width="800" height="600"></canvas>
+        </div>
+        <div class="instructions">
+            <p>Time your jumps carefully to navigate the obstacles!</p> <!-- Added motivational instruction -->
+        </div>
+    </main>
+    <footer>
+        &copy; 2024 Pumpy Pills &mdash; <a href="https://github.com/pumpypill/Pumpypill" style="color:#00d4ff;text-decoration:none;">GitHub</a>
+    </footer>
     <script type="module">
     // Simple error tracking
     window.addEventListener('error', function(e) {
