--- a/1.7/1.6.6.html
+++ b/1.7/1.6.6.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pumpy Pills</title>
+    <title>Pumpy Pill</title>
     <style>
         body { 
             margin: 0; 
