--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=https://pumpypill.fun/1.7/1.6.6.html" />
+    <meta http-equiv="refresh" content="0; url=/1.7/1.6.6.html" />
     <title>Redirecting...</title>
     <script>
-        window.location.href = "https://pumpypill.fun/1.7/1.6.6.html";
+        window.location.href = "/1.7/1.6.6.html";
     </script>
 </head>
 <body>
-    <p>If you are not redirected automatically, <a href="https://pumpypill.fun/1.7/1.6.6.html">click here</a>.</p>
+    <p>If you are not redirected automatically, <a href="/1.7/1.6.6.html">click here</a>.</p>
 </body>
 </html>
