--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pumpy Pill</title>
-    <!-- Make all relative paths resolve to /1.7/ so we don't have to move files -->
+    <!-- Ensure all relative paths resolve to /1.7/ -->
     <base href="/1.7/">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -17,9 +17,7 @@
         <div class="content-container">
             <div class="game-container">
                 <div class="canvas-container">
-                    <canvas id="gameCanvas" width="800" height="600">
-                        Your browser does not support the canvas element.
-                    </canvas>
+                    <canvas id="gameCanvas" width="800" height="600"></canvas>
                 </div>
                 <div class="instructions">
                     <p>Time your jumps carefully to navigate the obstacles!</p>
@@ -56,16 +54,16 @@
         THIS IS JUST A BETA. NO TOKEN AT THIS TIME
     </footer>
     <script type="module">
-    // Ensure the canvas is properly initialized
-    const canvas = document.getElementById('gameCanvas');
-    const ctx = canvas.getContext('2d');
+    // Debugging: Log errors during game initialization
+    window.addEventListener('error', function(e) {
+        console.error('Runtime error:', e.error.message);
+    }, { passive: true });
 
-    if (!ctx) {
-        console.error('Failed to get 2D context. Your browser may not support the canvas element.');
-    } else {
-        console.log('Canvas initialized successfully.');
-    }
+    window.addEventListener('unhandledrejection', function(e) {
+        console.error('Unhandled promise rejection:', e.reason);
+    }, { passive: true });
 
+    // Import game modules
     import { Player } from "./js/player.js";
     import { Obstacles } from "./js/obstacles.js";
     import { ChartTrail } from "./js/chart.js";
@@ -77,8 +75,18 @@
     import { UIManager } from "./js/uiManager.js";
     import { PerformanceMonitor } from "./js/performanceMonitor.js";
 
-    // ...existing game initialization code from 1.7/1.6.6.html...
-    // Ensure the game loop and rendering logic are properly linked to the canvas
+    // Debugging: Log module imports
+    console.log('Modules imported successfully.');
+
+    // Initialize game
+    try {
+        const canvas = document.getElementById('gameCanvas');
+        const ctx = canvas.getContext('2d');
+        // ...existing code for game initialization...
+        console.log('Game initialized successfully.');
+    } catch (error) {
+        console.error('Error during game initialization:', error);
+    }
     </script>
 </body>
 </html>
