reverse previous changes

--- a/404.html
+++ b/404.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta http-equiv="refresh" content="0; url=/" />
+    <meta http-equiv="refresh" content="0; url=./1.7/1.6.6.html">
     <title>Redirecting...</title>
     <script>
         // JS fallback in case meta refresh is blocked
-        window.location.replace("/");
+        window.location.replace("./1.7/1.6.6.html");
     </script>
 </head>
 <body>
-    <p>If you are not redirected automatically, <a href="/">click here</a>.</p>
+    <p>If you are not redirected automatically, <a href="./1.7/1.6.6.html">click here</a>.</p>
 </body>
 </html>
