move to homepage

--- a/404.html
+++ b/404.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta http-equiv="refresh" content="0; url=./index.html">
+    <meta http-equiv="refresh" content="0; url=/index.html">
     <title>Redirecting...</title>
     <script>
         // JS fallback in case meta refresh is blocked
-        window.location.replace("./index.html");
+        window.location.replace("/index.html");
     </script>
 </head>
 <body>
-    <p>If you are not redirected automatically, <a href="./index.html">click here</a>.</p>
+    <p>If you are not redirected automatically, <a href="/index.html">click here</a>.</p>
 </body>
 </html>
