--- a/index.html
+++ b/index.html
@@ -8,60 +8,48 @@
 </head>
 <body>
     <header>
-        <img src="/1.7/assets/site/logo.png" alt="Pumpy Pill Logo" style="height: 72px;width:auto;vertical-align:middle;display:inline-block;">
+        <img src="/1.7/assets/site/logo.png" alt="Pumpy Pill Logo" style="height: 96px;width:auto;vertical-align:middle;display:inline-block;">
     </header>
     <main>
-        <!-- Hero Section -->
-        <section class="hero-section">
-            <h1>Pumpy Pill</h1>
-            <p class="hero-subtitle">Navigate volatile crypto markets and train your brain to stay calm under pressure.</p>
-            <button class="cta-button">Play Now</button>
-        </section>
-
-        <!-- Game Instructions Section -->
-        <section class="instructions-section">
-            <div class="instructions-container">
-                <h2>How to Play</h2>
+        <h1 style="text-align:center;margin-bottom:16px;">Pumpy Pill</h1>
+        <div class="content-container">
+            <div class="game-container">
+                <div class="canvas-container">
+                    <canvas id="gameCanvas" width="800" height="600"></canvas>
+                </div>
+                <div class="instructions">
+                    <p>Time your jumps carefully to navigate the obstacles!</p>
+                </div>
+            </div>
+            <div class="info-container">
+                <h2>Game Instructions</h2>
                 <p>Click or tap to make your character jump. Avoid obstacles and collect points to increase your score!</p>
                 <p>Each level increases the difficulty but also gives you more rewards. Watch for special patterns that may appear!</p>
             </div>
-            <div class="canvas-container">
-                <canvas id="gameCanvas" width="800" height="600"></canvas>
+            <div class="roadmap-container">
+                <h2>Roadmap</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
-        </section>
-
-        <!-- Mission Section -->
-        <section class="mission-section">
-            <h2>Our Mission</h2>
-            <p>Crypto traders show addiction-like compulsive behaviors when facing losses. Pumpy Pill aims to develop loss tolerance and emotional regulation under pressure. Train your brain to think clearly when portfolios are bleeding.</p>
-        </section>
-
-        <!-- About Us Section -->
-        <section class="about-section">
-            <h2>About Us</h2>
-            <p>Suicide rates have increased 16% since 2011. The 2008 crash caused 6,566 additional deaths. Crypto's 24/7 volatility creates unprecedented psychological pressure. We built Pumpy Pill because the industry has a mental health problem no one talks about.</p>
-        </section>
-
-        <!-- Roadmap Section -->
-        <section class="roadmap-section">
-            <h2>Roadmap</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </section>
-
-        <!-- Contact Section -->
-        <section class="contact-section">
-            <h2>Contact Us</h2>
-            <p>If you have any questions or feedback, please reach out to us at <a href="mailto:support@pumpypill.com">support@pumpypill.com</a>.</p>
-        </section>
-
-        <!-- Bug Reports Section -->
-        <section class="bug-reports-section">
-            <h2>Bug Reports and Feature Requests</h2>
-            <p>If you encounter any bugs or have feature requests, please let us know by contacting us on X.</p>
-        </section>
+            <div class="roadmap-container">
+                <h2>Our Mission</h2>
+                <p>Crypto traders show addiction-like compulsive behaviors when facing losses. Pumpy Pill aims to develop loss tolerance and emotional regulation under pressure. Train your brain to think clearly when portfolios are bleeding.</p>
+            </div>
+            <div class="roadmap-container">
+                <h2>About Us</h2>
+                <p>Suicide rates have increased 16% since 2011. The 2008 crash caused 6,566 additional deaths. Crypto's 24/7 volatility creates unprecedented psychological pressure. We built Pumpy Pill because the industry has a mental health problem no one talks about.</p>
+            </div>
+            <div class="roadmap-container">
+                <h2>Contact Us</h2>
+                <p>If you have any questions or feedback, please reach out to us at <a href="mailto:support@pumpypill.com">support@pumpypill.com</a>.</p>
+            </div>
+            <div class="roadmap-container">
+                <h2>Bug Reports and Feature Requests</h2>
+                <p>If you encounter any bugs or have feature requests, please let us know by contacting us on X</a>.</p>
+            </div>
+        </div>
     </main>
     <footer>
-        <p>THIS IS JUST A BETA. NO TOKEN AT THIS TIME</p>
+        THIS IS JUST A BETA. NO TOKEN AT THIS TIME
     </footer>
     <script type="module">
     // Simple error tracking
